--- a/cfg/aliases/aliases_init.cfg
+++ b/cfg/aliases/aliases_init.cfg
@@ -14,11 +14,11 @@ alias "bp" "bot_place";                                         // Places a bot 
 echoln "[aliases_init.cfg] Registering meta utility aliases used by other aliases";
 alias "fin_keycontainer" "fin_everykey; fin_nothing";             // This will be activated upon pressing almost any key
 alias "fin_nothing"      "//";                                    // Can be used to remove most commands' console output
-alias "fin_everykey"     "";                                      // You can set this in game with: alias "fin_everykey" "commands here"
+alias "fin_everykey"     "";                                      // You can set this in game with: alias "fin_everykey" "commands here";
 alias "fin_onyaw"        "";
 alias "fin_onpitch"      "";
 alias "fin_onmousemove"  "";
-alias "fin_uninspect"    "-lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon;";
+alias "fin_uninspect"    "-lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon; -lookatweapon";
 // CS2 fin_clanid removed from fin_keycontainer because currently clan tags don't show up in game and it causes console UserInfo spam
 
 echoln "[aliases_init.cfg] Registering rebindable pitch/yaw aliases";
