--- a/cfg/aliases/aliases_items.cfg
+++ b/cfg/aliases/aliases_items.cfg
@@ -52,7 +52,7 @@ alias "fin_griefing" "buy deagle; buy taser; buy flashbang; buy smokegrenade; bu
 
 
 echoln "[aliases_items.cfg] Registering improved grenade aliases";
-alias "fin_molotov"   "fin_nadexhon; buy molotov;      use weapon_molotov; use weapon_incgrenade;";
+alias "fin_molotov"   "fin_nadexhon; buy molotov;      use weapon_molotov; use weapon_incgrenade";
 alias "fin_smoke"     "fin_nadexhon; buy smokegrenade; use weapon_smokegrenade";
 alias "fin_flashbang" "fin_nadexhon; buy flashbang;    use weapon_flashbang";
 alias "fin_hegrenade" "fin_nadexhon; buy hegrenade;    use weapon_hegrenade";
