--- a/cfg/keys/joystickbinds.cfg
+++ b/cfg/keys/joystickbinds.cfg
@@ -1,4 +1,8 @@
-echoln "";
+echoln "[joystickbinds.cfg] Start of joystickbinds.cfg";
+
+
+
+echoln "[joystickbinds.cfg] ";
 bind "A_BUTTON";
 bind "B_BUTTON";
 bind "X_BUTTON";
@@ -17,4 +21,8 @@ bind "UP";
 bind "DOWN";
 bind "LEFT";
 bind "RIGHT";
-echoln "";
+echoln "[joystickbinds.cfg] ";
+
+
+
+echoln "[joystickbinds.cfg] End of joystickbinds.cfg";
