--- a/cfg/keys/numberpadkeys.cfg
+++ b/cfg/keys/numberpadkeys.cfg
@@ -1,4 +1,8 @@
-echoln "";
+echoln "[numberpadkeys.cfg] Start of numberpadkeys.cfg";
+
+
+
+echoln "[numberpadkeys.cfg] ";
 bind "NUMLOCKTOGGLE";
 bind "KP_DIVIDE";
 bind "KP_MULTIPLY";
@@ -16,4 +20,8 @@ bind "KP_PGDN";
 bind "KP_ENTER";
 bind "KP_INS";
 bind "KP_DEL";
-echoln "";
+echoln "[numberpadkeys.cfg] ";
+
+
+
+echoln "[numberpadkeys.cfg] End of numberpadkeys.cfg";
