--- a/cfg/primary/debug.cfg
+++ b/cfg/primary/debug.cfg
@@ -2,7 +2,7 @@ echoln "[debug.cfg] Start of debug.cfg";
 
 
 
-echoln "[debug.cfg] Printing debug information and saving console log"
+echoln "[debug.cfg] Printing debug information and saving console log";
 echoln "[debug.cfg]  ";
 demo_info;                                                      // Print version info string.
 echoln "[debug.cfg]  ";
