--- a/cfg/prog/prog_binds.cfg
+++ b/cfg/prog/prog_binds.cfg
@@ -1,3 +1,7 @@
+echoln "[prog_binds.cfg] Start of prog_binds.cfg";
+
+
+
 bind "ESCAPE"        "+fin_key_ESCAPE;         fin_key_ESCAPE;         fin_keys_misc;          fin_keys_control";    // This is the esc key
 bind "F1"            "+fin_key_F1;             fin_key_F1;             fin_keys_misc;          fin_keys_function";   // This is the F1  key
 bind "F2"            "+fin_key_F2;             fin_key_F2;             fin_keys_misc;          fin_keys_function";   // This is the F2  key
@@ -135,3 +139,7 @@ bind "UP"	           "+fin_key_UP;             fin_key_UP;             fin_keys_
 bind "DOWN"	         "+fin_key_DOWN;           fin_key_DOWN;           fin_keys_dpad;          fin_keys_controller"; // This is down  on the D-Pad on Xbox Controllers
 bind "LEFT"	         "+fin_key_LEFT;           fin_key_LEFT;           fin_keys_dpad;          fin_keys_controller"; // This is left  on the D-Pad on Xbox Controllers
 bind "RIGHT"	       "+fin_key_RIGHT;          fin_key_RIGHT;          fin_keys_dpad;          fin_keys_controller"; // This is right on the D-Pad on Xbox Controllers
+
+
+
+echoln "[prog_binds.cfg] End of prog_binds.cfg";
