--- a/cfg/prog/prog_core.cfg
+++ b/cfg/prog/prog_core.cfg
@@ -1,3 +1,7 @@
+echoln "[prog_core.cfg] Start of prog_core.cfg";
+
+
+
 alias "+fin_key_ESCAPE"         "fin_nothing";
 alias "-fin_key_ESCAPE"         "fin_nothing";
 alias  "fin_key_ESCAPE"         "fin_nothing";
@@ -540,3 +544,7 @@ alias "fin_keys_front"          "fin_nothing";
 alias "fin_keys_face"           "fin_nothing";
 alias "fin_keys_dpad"           "fin_nothing";
 alias "fin_keys_controller"     "fin_nothing";
+
+
+
+echoln "[prog_core.cfg] End  of prog_core.cfg";
