--- a/cfg/utility/aliases.cfg
+++ b/cfg/utility/aliases.cfg
@@ -1,10 +1,18 @@
-echoln "";
-echoln "+---------------+---------------------------------+";
-echoln "| aliases.cfg   | Lists charts of other aliases   |";
-echoln "| fpsbugfix.cfg | Fixes the server-wide fps bug   |";
-echoln "| gamemodes.cfg | Lists all gamemode convars      |";
-echoln "| items.cfg     | Lists aliases to spawn items    |";
-echoln "| keys.cfg      | Lists aliases for listing keys  |";
-echoln "| positions.cfg | Lists aliases for map setpos-es |";
-echoln "+---------------+---------------------------------+";
-echoln "";
+echoln "[aliases.cfg] Start of aliases.cfg";
+
+
+
+echoln "[aliases.cfg] ";
+echoln "[aliases.cfg] +---------------+---------------------------------+";
+echoln "[aliases.cfg] | aliases.cfg   | Lists charts of other aliases   |";
+echoln "[aliases.cfg] | fpsbugfix.cfg | Fixes the server-wide fps bug   |";
+echoln "[aliases.cfg] | gamemodes.cfg | Lists all gamemode convars      |";
+echoln "[aliases.cfg] | items.cfg     | Lists aliases to spawn items    |";
+echoln "[aliases.cfg] | keys.cfg      | Lists aliases for listing keys  |";
+echoln "[aliases.cfg] | positions.cfg | Lists aliases for map setpos-es |";
+echoln "[aliases.cfg] +---------------+---------------------------------+";
+echoln "[aliases.cfg] ";
+
+
+
+echoln "[aliases.cfg] End of aliases.cfg";
