--- a/cfg/utility/clear.cfg
+++ b/cfg/utility/clear.cfg
@@ -1,61 +1,69 @@
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
-echoln " ";
+echoln "[clear.cfg] End of clear.cfg";
+
+
+
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+echoln "[clear.cfg] ";
+
+
+
+echoln "[clear.cfg] End of clear.cfg";
