--- a/cfg/utility/grammarly/disconnect.cfg
+++ b/cfg/utility/grammarly/disconnect.cfg
@@ -1,3 +1,7 @@
+echoln "[disconnect.cfg] Start of disconnect.cfg";
+
+
+
 alias "disconnec"   "disconnect";
 alias "disonnect"   "disconnect";
 alias "disconnct"   "disconnect";
@@ -136,3 +140,7 @@ alias "disocnnect"  "disconnect";
 alias "dicsonnect"  "disconnect";
 alias "dsiconnect"  "disconnect";
 alias "idsconnect"  "disconnect";
+
+
+
+echoln "[disconnect.cfg] End of disconnect.cfg";
