--- a/cfg/utility/grammarly/exit.cfg
+++ b/cfg/utility/grammarly/exit.cfg
@@ -1,3 +1,7 @@
+echoln "[exit.cfg] Start of exit.cfg";
+
+
+
 alias "exi" "exit";
 alias "ext" "exit";
 alias "eit" "exit";
@@ -49,3 +53,7 @@ alias "sxit" "exit";
 alias "exti" "exit";
 alias "eixt" "exit";
 alias "xeit" "exit";
+
+
+
+echoln "[exit.cfg] End of exit.cfg";
