--- a/cfg/utility/grammarly/quit.cfg
+++ b/cfg/utility/grammarly/quit.cfg
@@ -1,3 +1,7 @@
+echoln "[quit.cfg] Start of quit.cfg";
+
+
+
 alias "qui" "quit";
 alias "qut" "quit";
 alias "qit" "quit";
@@ -45,3 +49,7 @@ alias "suit" "quit";
 alias "quti" "quit";
 alias "qiut" "quit";
 alias "uqit" "quit";
+
+
+
+echoln "[quit.cfg] End of quit.cfg";
