--- a/cfg/utility/keys.cfg
+++ b/cfg/utility/keys.cfg
@@ -1,14 +1,22 @@
-echoln "";
-echoln "+-------------------+----------------------------------+";
-echoln "| 60pecentrow1.cfg  | ESC through F12                  |";
-echoln "| 60pecentrow2.cfg  | Tilde through backspace          |";
-echoln "| 60pecentrow3.cfg  | Tab through backslash            |";
-echoln "| 60pecentrow4.cfg  | Caps lock through enter          |";
-echoln "| 60pecentrow5.cfg  | Left shift through right shift   |";
-echoln "| 60pecentrow6.cfg  | Left CTRL through right CTRL     |";
-echoln "| 80percentkeys.cfg | Arrow keys and the keys above    |";
-echoln "| joystickbinds.cfg | Controller buttons               |";
-echoln "| mousekeybinds.cfg | Mouse buttons                    |";
-echoln "| numberpadkeys.cfg | All the numpad/keypad keys       |";
-echoln "+-------------------+----------------------------------+";
-echoln "";
+echoln "[keys.cfg] Start of keys.cfg";
+
+
+
+echoln "[keys.cfg] ";
+echoln "[keys.cfg] +-------------------+----------------------------------+";
+echoln "[keys.cfg] | 60pecentrow1.cfg  | ESC through F12                  |";
+echoln "[keys.cfg] | 60pecentrow2.cfg  | Tilde through backspace          |";
+echoln "[keys.cfg] | 60pecentrow3.cfg  | Tab through backslash            |";
+echoln "[keys.cfg] | 60pecentrow4.cfg  | Caps lock through enter          |";
+echoln "[keys.cfg] | 60pecentrow5.cfg  | Left shift through right shift   |";
+echoln "[keys.cfg] | 60pecentrow6.cfg  | Left CTRL through right CTRL     |";
+echoln "[keys.cfg] | 80percentkeys.cfg | Arrow keys and the keys above    |";
+echoln "[keys.cfg] | joystickbinds.cfg | Controller buttons               |";
+echoln "[keys.cfg] | mousekeybinds.cfg | Mouse buttons                    |";
+echoln "[keys.cfg] | numberpadkeys.cfg | All the numpad/keypad keys       |";
+echoln "[keys.cfg] +-------------------+----------------------------------+";
+echoln "[keys.cfg] ";
+
+
+
+echoln "[keys.cfg] End of keys.cfg";
