--- a/cfg/utility/positions.cfg
+++ b/cfg/utility/positions.cfg
@@ -1,19 +1,26 @@
-echoln "";
-echoln "+-------------+----------------------------------+";
-echoln "| de_cache    | Setpos positions for Cache       |";
-echoln "| de_dust2    | Setpos positions for Dust 2      |";
-echoln "| de_inferno  | Setpos positions for Inferno     |";
-echoln "| de_mirage   | Setpos positions for Mirage      |";
-echoln "| de_nuke     | Setpos positions for Nuke        |";
-echoln "| de_overpass | Setpos positions for Overpass    |";
-echoln "| *de_ancient | No list of setpos positions yet  |";
-echoln "| *de_train   | No list of setpos positions yet  |";
-echoln "| *de_agency  | No list of setpos positions yet  |";
-echoln "| *cs_agency  | No list of setpos positions yet  |";
-echoln "| *cs_office  | No list of setpos positions yet  |";
-echoln "| *de_iris    | No list of setpos positions yet  |";
-echoln "| *cs_climb   | No list of setpos positions yet  |";
-echoln "+-------------+----------------------------------+";
-echoln " * Maps marked with an asterisk have no list yet,";
-echoln "   they'll be added eventually, aren't there now.";
-echoln "";
+echoln "[positions.cfg] Start of positions.cfg";
+
+
+echoln "[positions.cfg] ";
+echoln "[positions.cfg] +-------------+----------------------------------+";
+echoln "[positions.cfg] | de_cache    | Setpos positions for Cache       |";
+echoln "[positions.cfg] | de_dust2    | Setpos positions for Dust 2      |";
+echoln "[positions.cfg] | de_inferno  | Setpos positions for Inferno     |";
+echoln "[positions.cfg] | de_mirage   | Setpos positions for Mirage      |";
+echoln "[positions.cfg] | de_nuke     | Setpos positions for Nuke        |";
+echoln "[positions.cfg] | de_overpass | Setpos positions for Overpass    |";
+echoln "[positions.cfg] | *de_ancient | No list of setpos positions yet  |";
+echoln "[positions.cfg] | *de_train   | No list of setpos positions yet  |";
+echoln "[positions.cfg] | *de_agency  | No list of setpos positions yet  |";
+echoln "[positions.cfg] | *cs_agency  | No list of setpos positions yet  |";
+echoln "[positions.cfg] | *cs_office  | No list of setpos positions yet  |";
+echoln "[positions.cfg] | *de_iris    | No list of setpos positions yet  |";
+echoln "[positions.cfg] | *cs_climb   | No list of setpos positions yet  |";
+echoln "[positions.cfg] +-------------+----------------------------------+";
+echoln "[positions.cfg]  * Maps marked with an asterisk have no list yet,";
+echoln "[positions.cfg]    they'll be added eventually, aren't there now.";
+echoln "[positions.cfg] ";
+
+
+
+echoln "[positions.cfg] End of positions.cfg";
