--- a/cfg/utility/skinpictures.cfg
+++ b/cfg/utility/skinpictures.cfg
@@ -1,5 +1,12 @@
+echoln "[skinpictures.cfg] Start of skinpictures.cfg";
+
+
 //exec "./practice.cfg";
 cl_drawhud "false";
 r_dof_override "true";
 r_dof_override_near_blurry "80";
 bind "RSHIFT" "screenshot";
+
+
+
+echoln "[skinpictures.cfg] End of skinpictures.cfg";
