--- a/cfg/aliases/aliases_ui.cfg
+++ b/cfg/aliases/aliases_ui.cfg
@@ -8,16 +8,16 @@ alias "-fin_autoknifeinspect" "+lookatweapon";                  // Inspect the w
 
 
 echoln "[aliases_ui.cfg] Registering keybind list aliases";
-alias "fin_60percentrow1" "exec ./keys/60percentrow1.cfg";
-alias "fin_60percentrow2" "exec ./keys/60percentrow2.cfg";
-alias "fin_60percentrow3" "exec ./keys/60percentrow3.cfg";
-alias "fin_60percentrow4" "exec ./keys/60percentrow4.cfg";
-alias "fin_60percentrow5" "exec ./keys/60percentrow5.cfg";
-alias "fin_60percentrow6" "exec ./keys/60percentrow6.cfg";
-alias "fin_80percentkeys" "exec ./keys/80percentkeys.cfg";
-alias "fin_numberpadkeys" "exec ./keys/numberpadkeys.cfg";
-alias "fin_mousekeybinds" "exec ./keys/mousekeybinds.cfg";
-alias "fin_joystickbinds" "exec ./keys/joystickbinds.cfg";
+alias "fin_60percentrow1" "exec ./cfg/keys/60percentrow1.cfg";
+alias "fin_60percentrow2" "exec ./cfg/keys/60percentrow2.cfg";
+alias "fin_60percentrow3" "exec ./cfg/keys/60percentrow3.cfg";
+alias "fin_60percentrow4" "exec ./cfg/keys/60percentrow4.cfg";
+alias "fin_60percentrow5" "exec ./cfg/keys/60percentrow5.cfg";
+alias "fin_60percentrow6" "exec ./cfg/keys/60percentrow6.cfg";
+alias "fin_80percentkeys" "exec ./cfg/keys/80percentkeys.cfg";
+alias "fin_numberpadkeys" "exec ./cfg/keys/numberpadkeys.cfg";
+alias "fin_mousekeybinds" "exec ./cfg/keys/mousekeybinds.cfg";
+alias "fin_joystickbinds" "exec ./cfg/keys/joystickbinds.cfg";
 alias "fin_listeverybind" "fin_60percentrow1; fin_60percentrow2; fin_60percentrow3; fin_60percentrow4; fin_60percentrow5; fin_60percentrow6; fin_80percentkeys; fin_numberpadkeys; fin_mousekeybinds; fin_joystickbinds";
 
 
