--- a/cfg/utility/gamemodes.cfg
+++ b/cfg/utility/gamemodes.cfg
@@ -1,38 +1,46 @@
-echoln "----------------------------------------------------------------------------------------";
-echoln "|                  |   game_mode    |   game_mode    |   game_mode    |   game_mode    |";
-echoln "|    game_type   # |       0        |       1        |       2        |       3        |";
-echoln "|--------------------------------------------------------------------------------------|";
-echoln "|   Classic    | 0 |     Casual     |  Competitive   |    Wingman     | Weapons Expert |";
-echoln "|   Gun Game   | 1 |    Arms Race   |  Demolition    |   Deathmatch   |                |";
-echoln "|   Training   | 2 |    Training    |                |                |                |";
-echoln "|    Custom    | 3 |     Custom     |                |                |                |";
-echoln "| Cooperative  | 4 |    Guardian    |  Co-op Strike  |                |                |";
-echoln "|   Skirmish   | 5 |    War Games   |                |                |                |";
-echoln "| Free For All | 6 |   Danger Zone  |                |                |                |";
-echoln "----------------------------------------------------------------------------------------";
-echoln "";
-echoln "----------------------------------------------------------------------------------";
-echoln "| sv_skirmish_id |      War game      | Game  Mode |        CFG filenames        |";
-echoln "|       0        |   None (default)   |            |                             |";
-echoln "|       1        |   Stab Stab Zap    |   Casual   |   op08_stab_stab_zap.cfg    |";
-echoln "|       2        |    Free For All    | Deathmatch | gamemode_dm_freeforall.cfg  |";
-echoln "|       3        |  Flying Scoutsman  |   Casual   |  op08_flying_scoutsman.cfg  |";
-echoln "|       4        | Trigger Discipline |   Casual   | op08_trigger_discipline.cfg |";
-echoln "|       6        |  Boom! Headshot!   | Deathmatch |     op08_headshots.cfg      |";
-echoln "|       7        |   Hunter-Gathers   | Deathmatch |  op08_hunter_gatherers.cfg  |";
-echoln "|       8        | Heavy Assault Suit |   Casual   | op08_heavy_assault_suit.cfg |";
-echoln "|      10        |      Arms Race     |  Arms Race |                             |";
-echoln "|      11        |     Demolition     | Demolition |                             |";
-echoln "|      12        |       Retakes      |   Casual   |  gamemode_retakecasual.cfg  |";
-echoln "|                |     Bloodletter    |            |     op08_bloodletter.cfg    |";
-echoln "|                |    Bounty Hunter   |            |    op08_bounty_hunter.cfg   |";
-echoln "|                |   Team Deathmatch  |            |   op08_team_deathmatch.cfg  |";
-echoln "----------------------------------------------------------------------------------";
-echoln "";
-echoln "--------------------------------------------------------";
-echoln "|             |         sv_game_mode_flags             |";
-echoln "|  Game Mode  |    0    |       4       |      32      |";
-echoln "|------------------------------------------------------|";
-echoln "| Competitive | default |               | Short Match  |";
-echoln "| Deathmatch  | default | Team vs Team  | Free For All |";
-echoln "--------------------------------------------------------";
+echoln "[gamemodes.cfg] Start of gamemodes.cfg";
+
+
+
+echoln "[gamemodes.cfg] ----------------------------------------------------------------------------------------";
+echoln "[gamemodes.cfg] |                  |   game_mode    |   game_mode    |   game_mode    |   game_mode    |";
+echoln "[gamemodes.cfg] |    game_type   # |       0        |       1        |       2        |       3        |";
+echoln "[gamemodes.cfg] |--------------------------------------------------------------------------------------|";
+echoln "[gamemodes.cfg] |   Classic    | 0 |     Casual     |  Competitive   |    Wingman     | Weapons Expert |";
+echoln "[gamemodes.cfg] |   Gun Game   | 1 |    Arms Race   |  Demolition    |   Deathmatch   |                |";
+echoln "[gamemodes.cfg] |   Training   | 2 |    Training    |                |                |                |";
+echoln "[gamemodes.cfg] |    Custom    | 3 |     Custom     |                |                |                |";
+echoln "[gamemodes.cfg] | Cooperative  | 4 |    Guardian    |  Co-op Strike  |                |                |";
+echoln "[gamemodes.cfg] |   Skirmish   | 5 |    War Games   |                |                |                |";
+echoln "[gamemodes.cfg] | Free For All | 6 |   Danger Zone  |                |                |                |";
+echoln "[gamemodes.cfg] ----------------------------------------------------------------------------------------";
+echoln "[gamemodes.cfg] ";
+echoln "[gamemodes.cfg] ----------------------------------------------------------------------------------";
+echoln "[gamemodes.cfg] | sv_skirmish_id |      War game      | Game  Mode |        CFG filenames        |";
+echoln "[gamemodes.cfg] |       0        |   None (default)   |            |                             |";
+echoln "[gamemodes.cfg] |       1        |   Stab Stab Zap    |   Casual   |   op08_stab_stab_zap.cfg    |";
+echoln "[gamemodes.cfg] |       2        |    Free For All    | Deathmatch | gamemode_dm_freeforall.cfg  |";
+echoln "[gamemodes.cfg] |       3        |  Flying Scoutsman  |   Casual   |  op08_flying_scoutsman.cfg  |";
+echoln "[gamemodes.cfg] |       4        | Trigger Discipline |   Casual   | op08_trigger_discipline.cfg |";
+echoln "[gamemodes.cfg] |       6        |  Boom! Headshot!   | Deathmatch |     op08_headshots.cfg      |";
+echoln "[gamemodes.cfg] |       7        |   Hunter-Gathers   | Deathmatch |  op08_hunter_gatherers.cfg  |";
+echoln "[gamemodes.cfg] |       8        | Heavy Assault Suit |   Casual   | op08_heavy_assault_suit.cfg |";
+echoln "[gamemodes.cfg] |      10        |      Arms Race     |  Arms Race |                             |";
+echoln "[gamemodes.cfg] |      11        |     Demolition     | Demolition |                             |";
+echoln "[gamemodes.cfg] |      12        |       Retakes      |   Casual   |  gamemode_retakecasual.cfg  |";
+echoln "[gamemodes.cfg] |                |     Bloodletter    |            |     op08_bloodletter.cfg    |";
+echoln "[gamemodes.cfg] |                |    Bounty Hunter   |            |    op08_bounty_hunter.cfg   |";
+echoln "[gamemodes.cfg] |                |   Team Deathmatch  |            |   op08_team_deathmatch.cfg  |";
+echoln "[gamemodes.cfg] ----------------------------------------------------------------------------------";
+echoln "[gamemodes.cfg] ";
+echoln "[gamemodes.cfg] --------------------------------------------------------";
+echoln "[gamemodes.cfg] |             |         sv_game_mode_flags             |";
+echoln "[gamemodes.cfg] |  Game Mode  |    0    |       4       |      32      |";
+echoln "[gamemodes.cfg] |------------------------------------------------------|";
+echoln "[gamemodes.cfg] | Competitive | default |               | Short Match  |";
+echoln "[gamemodes.cfg] | Deathmatch  | default | Team vs Team  | Free For All |";
+echoln "[gamemodes.cfg] --------------------------------------------------------";
+
+
+
+echoln "[gamemodes.cfg] End of gamemodes.cfg";
