--- a/cfg/utility/temp.cfg
+++ b/cfg/utility/temp.cfg
@@ -1,3 +1,7 @@
+echoln "[temp.cfg] Start of temp.cfg";
+
+
+
 alias "+jump_s1"      "+jump_s1_";
 alias "+jump_s1_"     "+jump;  alias +jump_s1;  alias -jump_s1 -jump_s1_";
 alias "-jump_s1"      "";
@@ -10,3 +14,7 @@ alias "-duck_s1_"     "-duck;  alias -duck_s1;  alias +duck_s1 +duck_s1_";
 
 alias "+mj" "+jump_s1; -duck_s1";
 alias "-mj" "-jump_s1";
+
+
+
+echoln "[temp.cfg] End of temp.cfg";
